# banter-bus-management-api

./: .copier-answers.yml  .deepsource.toml  .env.sample  .env.test  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cloudbuild.yaml  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt  service.yaml  setup.cfg  tox.ini
.devcontainer/: Dockerfile.dev  devcontainer.example.json  devcontainer.json  docker-compose.dev.yml
app/: __init__.py  auth.py  factory.py  healthcheck.py  main.py
app/core/: config.py  exceptions.py  logger.py  models.py  repository.py
app/game/: game_api.py  game_api_models.py  game_exceptions.py  game_factory.py  game_models.py  game_repository.py  game_service.py
app/game/games/: abstract_game.py  drawlosseum.py  fibbing_it.py  game.py  quibly.py
app/games/: api.py
app/question/: question_api.py  question_api_models.py  question_exceptions.py  question_factory.py  question_models.py  question_repository.py  question_service.py
app/question/translation/: question_api.py  question_translation_api_models.py
app/story/: story_api.py  story_api_models.py  story_exceptions.py  story_factory.py  story_models.py  story_repository.py  story_service.py
db/: Dockerfile  init.sh
db/data/management_api/: game.json  question.json  story.json
specs/: openapi.yml
tests/data/: game_collection.py  question_collection.py  story_collection.py
tests/integration/: conftest.py  test_game.py  test_question.py  test_story.py
tests/unit/: factories.py
tests/unit/game/: game_service_data.py  (+2 more)
(+14 files in other folders)
